--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@import url('https://fonts.cdnfonts.com/css/euclid-circular-a');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+*,body,p,h1,h2,h3,h4,h5,h6,span,a,button{
+font-family: 'Euclid Circular A', sans-serif !important;
+}
+                                                
